--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ wagtailfontawesome==1.2.1
 
 jupyter==1.0.0
 papermill==1.0.1
+custos-sdk==1.0.2
 
 -e git+https://github.com/apache/airavata-django-portal-sdk.git@master#egg=airavata-django-portal-sdk
 -e git+https://github.com/apache/airavata.git@develop#egg=airavata-python-sdk&subdirectory=airavata-api/airavata-client-sdks/airavata-python-sdk
