--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Pin these dependencies
 Django>=2.2,<2.3
-requests==2.13.0
+requests>=2.13.0
 requests-oauthlib==0.7.0
 thrift==0.10.0
 thrift_connector==0.24
@@ -12,7 +12,7 @@ wagtailfontawesome==1.2.1
 
 jupyter==1.0.0
 papermill==1.0.1
-
+custos-sdk==1.0.2
 # TODO: switch this back to master branch once mft-integration branch testing is done
 -e git+https://github.com/apache/airavata-django-portal-sdk.git@mft-integration#egg=airavata-django-portal-sdk
 -e git+https://github.com/apache/airavata.git@develop#egg=airavata-python-sdk&subdirectory=airavata-api/airavata-client-sdks/airavata-python-sdk
